bootstrap and static style work

--- a/examples/templates/partials/_header.html
+++ b/examples/templates/partials/_header.html
@@ -1,5 +1,7 @@
 <header>
-    <nav>
-        <a href='/products'>index</a>
-    </nav>
+    <nav class="navbar navbar-dark bg-primary mb-3">
+        <div class="container">
+            <a class="navbar-brand" href='/products'>Home</a>
+        </div>
+    </nav>  
 </header>
