--- a/examples/templates/partials/_footer.html
+++ b/examples/templates/partials/_footer.html
@@ -1,4 +1,10 @@
 <footer>
-    <hr>
-    <p>Tüm Hakları Saklıdır.</p>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col text-center">
+                <hr>
+                <p>Tüm Hakları Saklıdır.</p>
+            </div>
+        </div>
+    </div>
 </footer>
