--- a/movieapp/movieapp/templates/movies/base.html
+++ b/movieapp/movieapp/templates/movies/base.html
@@ -10,7 +10,7 @@
     {% block css_file %}{% endblock  %}
     <title>{% block page_title %}{% endblock  %}</title>
 </head>
-<body>
+<body id="page-top">
     {% block content %}{% endblock  %}
 
     <script src="{% static "vendor/jquery/jquery.min.js" %}" type="text/javascript"></script>
