--- a/movieapp/movieapp/movies/templates/index.html
+++ b/movieapp/movieapp/movies/templates/index.html
@@ -30,19 +30,11 @@
         </div>
       </div>
       <div class="row">
+        {% for movie in movies %}
         <div class="col-xl-3 col-md-6 mb-4">
             {% include "partials/_movie.html" %}
         </div>
-        <div class="col-xl-3 col-md-6 mb-4">
-            {% include "partials/_movie.html" %}
-        </div>
-        <div class="col-xl-3 col-md-6 mb-4">
-            {% include "partials/_movie.html" %}
-
-        </div>
-        <div class="col-xl-3 col-md-6 mb-4">
-            {% include "partials/_movie.html" %}
-        </div>
+        {% endfor %}
       </div>
     </div>
 
