--- a/movieapp/movieapp/movies/templates/movies.html
+++ b/movieapp/movieapp/movies/templates/movies.html
@@ -22,33 +22,11 @@
         <div class="row">
           <div class="col">
             <div class="row">
-              <div class="col-xl-4 col-md-6 mb-4">
-                {% include "partials/_movie.html" %}
-              </div>
-              <div class="col-xl-4 col-md-6 mb-4">
-                {% include "partials/_movie.html" %}
-              </div>
-              <div class="col-xl-4 col-md-6 mb-4">
-                {% include "partials/_movie.html" %}
-              </div>
-              <div class="col-xl-4 col-md-6 mb-4">
-                {% include "partials/_movie.html" %}
-              </div>
-              <div class="col-xl-4 col-md-6 mb-4">
-                {% include "partials/_movie.html" %}
-              </div>
-              <div class="col-xl-4 col-md-6 mb-4">
-                {% include "partials/_movie.html" %}
-              </div>
-              <div class="col-xl-4 col-md-6 mb-4">
-                {% include "partials/_movie.html" %}
-              </div>
-              <div class="col-xl-4 col-md-6 mb-4">
-                {% include "partials/_movie.html" %}
-              </div>
-              <div class="col-xl-4 col-md-6 mb-4">
-                {% include "partials/_movie.html" %}
-              </div>
+              {% for movie in movies %}
+                <div class="col-xl-4 col-md-6 mb-4">
+                  {% include "partials/_movie.html" %}
+                </div>
+              {% endfor %}
             </div>
             <div class="text-center mt-1 mb-4 col-12">
               <div class="spinner-border" role="status">
