--- a/movieapp/movieapp/movies/templates/movie-details.html
+++ b/movieapp/movieapp/movies/templates/movie-details.html
@@ -20,12 +20,12 @@
                 </h6>
                 <small class="text-muted">8,784</small>
               </div>
-              <img src="{% static "img/cover3.jpg" %}" class="img-fluid" alt="..." />
+              <img src="{% static "img/"|add:movie.coverImage %}" class="img-fluid" alt="..." />
             </div>
           </div>
           <div class="col-xl-3 col-lg-3">
             <div class="bg-white p-3 widget shadow rounded mb-4">
-              <img src="{% static "img/m1.jpg" %}" class="img-fluid rounded" alt="..." />
+              <img src="{% static "img/"|add:movie.imageUrl %}" class="img-fluid rounded" alt="..." />
               <h1 class="h6 mb-0 mt-3 font-weight-bold text-gray-900">
                 Director
               </h1>
@@ -50,7 +50,7 @@
               >
                 <div class="col-lg-7 m-b-4">
                   <h3 class="text-gray-900 mb-0 mt-0 font-weight-bold">
-                    The Fate of the Furious <small>2019</small>
+                    {{ movie.title }}
                   </h3>
                   <p class="mb-0 text-gray-800">
                     <small class="text-muted"
