--- a/course/examples/myapp/templates/index.html
+++ b/course/examples/myapp/templates/index.html
@@ -13,9 +13,21 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            {% for category in categories %}
-                <a class="btn btn-primary" href="{% url 'products_by_category' category %}">{{ category }}</a>
-            {% endfor %}
+           <ul>
+                {% for product in products %}
+                    {% if product.isActive %}
+                        <li>
+                            <a href={% url 'product_details' product.slug %}> {{ product.name }} </a>
+                            - {{ product.price }}
+                        </li>
+                    {% endif %}
+                {% endfor %}
+           </ul>
+           <hr>
+           <p>{{ product_count }} adet ürün bulundu.</p>
+           <p>{{ price.price__avg }} TL ortalama fiyat hesaplandı.</p>
+           <p>{{ price.price__min }} TL min fiyat hesaplandı.</p>
+           <p>{{ price.price__max }} TL max fiyat hesaplandı.</p>
         </div>
     </div>
 </div>
