--- a/movieapp/movieapp/movies/templates/partials/_sidebar.html
+++ b/movieapp/movieapp/movies/templates/partials/_sidebar.html
@@ -1,23 +1,20 @@
 {% load static %}
 
 <ul class="navbar-nav sidebar sidebar-dark accordion" id="accordionSidebar">
-    <a
-      class="sidebar-brand d-flex align-items-center justify-content-center"
-      href="{% url "home_page" %}"
-    >
+    <a class="sidebar-brand d-flex align-items-center justify-content-center" href="{% url 'home_page' %}">
       <div class="sidebar-brand-icon">
-        <img src="{% static "img/logo-icon.png" %}" alt="" />
+        <img src="{% static 'img/logo-icon.png' %}" alt="" />
       </div>
       <div class="sidebar-brand-text mx-3">
-        <img src="{% static "img/logo.png" %}" alt="" />
+        <img src="{% static 'img/logo.png' %}" alt="" />
       </div>
     </a>
 
     <li class="nav-item active">
-      <a class="nav-link" href="{% url "movies_page" %}">
+      <a class="nav-link" href="{% url 'movies_page' %}">
         <i class="fas fa-fw fa-film"></i>
         <span>Movies</span>
-        </a>
+      </a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="events.html">
