--- a/course/examples/myapp/templates/list.html
+++ b/course/examples/myapp/templates/list.html
@@ -6,18 +6,13 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock  %}
 
-{% block page_title %} index.html {% endblock  %}
+{% block page_title %} list.html {% endblock  %}
 
 {% block content %}
 
 <div class="container">
     <div class="row">
         <div class="col">
-            <a href="create">Create Product</a>
-            <form action="list" method='GET'>
-                Kelime: <input type="text" name='q'>
-                <button type='submit'>Submit</button>
-            </form>
            <ul>
                 {% for product in products %}
                     {% if product.isActive %}
