--- a/course/examples/myapp/templates/edit.html
+++ b/course/examples/myapp/templates/edit.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 {% endblock  %}
 
-{% block page_title %} create.html {% endblock  %}
+{% block page_title %} edit.html {% endblock  %}
 
 {% block content %}
 
