--- a/course/examples/myapp/templates/index.html
+++ b/course/examples/myapp/templates/index.html
@@ -14,6 +14,7 @@
     <div class="row">
         <div class="col">
             <a href="create">Create Product</a>
+            <a href="list">Products</a>
             <hr>
             <form action="list" method='GET'>
                 Kelime: <input type="text" name='q'>
