--- a/course/examples/myapp/templates/list.html
+++ b/course/examples/myapp/templates/list.html
@@ -18,7 +18,7 @@
                     <li>
                         {{ product.name }} - {{ product.price }}
                         <a href="{% url "product_edit" product.id %}">Edit</a>
-                        <a href="{% url "delete_edit" product.id %}">Delete</a>
+                        <a href="{% url "product_delete" product.id %}">Delete</a>
                     </li>
                 {% endfor %}
            </ul>
