--- a/course/examples/myapp/templates/upload.html
+++ b/course/examples/myapp/templates/upload.html
@@ -15,7 +15,7 @@
         <div class="col">
            <form action="{% url 'upload_image' %}" method='POST' enctype='multipart/form-data'>
                 {% csrf_token %}
-                <input type="file" name="image">
+                {{ form }}
                 <button>Upload</button>
            </form>
         </div>
