--- a/course/examples/myapp/templates/edit.html
+++ b/course/examples/myapp/templates/edit.html
@@ -13,7 +13,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-           <form method='POST' novalidate>
+           <form method='POST' novalidate enctype='multipart/form-data'>
                 {% csrf_token %}
                 {% for field in form %}
                     <div class="mb-3 {% if field.errors %} invalid {% endif %}">
