--- a/course/examples/myapp/templates/list.html
+++ b/course/examples/myapp/templates/list.html
@@ -12,20 +12,25 @@
 
 <div class="container">
     <div class="row">
-        <div class="col">
-           <ul>
-                {% for product in products %}
-                    <li>
-                        {{ product.name }} - {{ product.price }}
-                        <a href="{% url "product_edit" product.id %}">Edit</a>
-                        <a href="{% url "product_delete" product.id %}">Delete</a>
-                    </li>
-                {% endfor %}
-           </ul>
+    {% for product in products %}
+        <div class="card mb-3">
+            <div class="row">
+                <div class="col-md-3">
+                    <img src="{{ product.image.url }}" alt="" class="img-fluid rounded-start">
+                </div>
+                <div class="col-md-9">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ product.name }}</h5>
+                        <p class="card-text">{{ product.description }}</p>
+                        <p class="card-price">{{ product.price }}</p>
+                        <a href="{% url "product_edit" product.id %}" class="btn btn-primary btn-sm">Edit</a>
+                        <a href="{% url "product_delete" product.id %}" class="btn btn-danger btn-sm">Delete</a>
+                    </div>
+                </div>
+            </div>
         </div>
+    {% endfor %}
     </div>
-</div>
-
 {% endblock  %}
 
 {% block js_files %}
