--- a/course/examples/templates/layout.html
+++ b/course/examples/templates/layout.html
@@ -13,7 +13,7 @@
     {% include 'partials/_header.html' %}
     {% block content %}{% endblock  %}
     {% include 'partials/_footer.html' %}
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     {% block js_files %}{% endblock  %}
 
 </body>
