--- a/course/examples/templates/partials/_header.html
+++ b/course/examples/templates/partials/_header.html
@@ -1,7 +1,29 @@
 <header>
-    <nav class="navbar navbar-dark bg-primary mb-3">
+    <nav class="navbar navbar-extend-lg navbar-dark bg-primary mb-3">
         <div class="container">
             <a class="navbar-brand" href='/products'>Home</a>
+
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarDropdown">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            
+            <div class="collapse navbar-collapse" id="navbarDropdown">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a href="{% url "login" %}" class="nav-link">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url "register" %}" class="nav-link">Register</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="{% url "logout" %}" class="nav-link">Logout</a>
+                    </li>
+                    <li class="nav-item">
+                        <a href="#" class="nav-link">Username</a>
+                    </li>
+
+                </ul>
+            </div>
         </div>
     </nav>  
 </header>
