--- a/course/examples/account/templates/account/register.html
+++ b/course/examples/account/templates/account/register.html
@@ -13,6 +13,33 @@
     <div class="row">
         <div class="col">
           <h1>Register</h1>
+          <hr>
+          <form method="POST">
+            {% csrf_token %}
+            {% if error %}
+            <div class="alert alert-warning">
+              {{error}}
+            </div>
+          {% endif %}
+            <div class="mb-3">
+              <label for="username" class="form-laber">Username</label>
+              <input type="text" name="username" id="username" class="form-control" required>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-laber">Email</label>
+              <input type="email" name="email" id="email" class="form-control" required>
+            </div>
+            <div class="mb-3">
+              <label for="password" class="form-laber">Password</label>
+              <input type="password" name="password" id="password" class="form-control" required>
+            </div>
+            <div class="mb-3">
+              <label for="repassword" class="form-laber">Re-password</label>
+              <input type="password" name="repassword" id="repassword" class="form-control" required>
+            </div>
+            
+            <input type="submit" value="Register" class="btn btn-primary">
+          </form>
         </div>
     </div>
 </div>
