--- a/course/examples/templates/layout.html
+++ b/course/examples/templates/layout.html
@@ -10,6 +10,7 @@
     <title>{% block page_title %}{% endblock  %}</title>
 </head>
 <body>
+    {% include 'partials/_messages.html' %}
     {% include 'partials/_header.html' %}
     {% block content %}{% endblock  %}
     {% include 'partials/_footer.html' %}
