--- a/course/examples/account/templates/account/login.html
+++ b/course/examples/account/templates/account/login.html
@@ -14,25 +14,30 @@
         <div class="col">
           <h1>Login</h1>
           <hr>
-          <form method="POST">
+          <form method="POST" novalidate>
             {% csrf_token %}
-            {% if messages %}
-              <ul class="messages">
-                {% for message in messages %}
-                  <li {% if message.tags %} class="{{message.tags}}"{% endif %}>{{message}}</li>
-                {% endfor %}
-              </ul>
-            {% endif %}
 
+            {% for error in form.non_field_errors %}
+              <div class="alert alert-danger">
+                {{error}}
+              </div>
+            {% endfor %}
 
-            <div class="mb-3">
-              <label for="username" class="form-laber">Username</label>
-              <input type="text" name="username" id="username" class="form-control" required>
+            {% for field in form %}
+            
+            <div class="mb3 {% if field.errors %} invalid {% endif %}">
+              {% if field.errors %}
+                <div class="alert alert-danger pb-0">
+                  {{ field.errors }}
+                </div>
+              {% endif %}
+              <label for="{{field.id_for_label}}" class="form-label">{{ field.label }}</label>
+              {{ field }}
+              
             </div>
-            <div class="mb-3">
-              <label for="password" class="form-laber">Password</label>
-              <input type="password" name="password" id="password" class="form-control" required>
-            </div>
+
+            {% endfor %}
+
             <input type="submit" value="login" class="btn btn-primary">
           </form>
         </div>
