--- a/course/examples/account/templates/account/register.html
+++ b/course/examples/account/templates/account/register.html
@@ -14,30 +14,30 @@
         <div class="col">
           <h1>Register</h1>
           <hr>
-          <form method="POST">
-            {% csrf_token %}
-            {% if error %}
-            <div class="alert alert-warning">
+          <form method="POST" novalidate>
+          {% csrf_token %}
+
+          {% for error in form.non_field_errors %}
+            <div class="alert alert-danger">
               {{error}}
             </div>
-          {% endif %}
-            <div class="mb-3">
-              <label for="username" class="form-laber">Username</label>
-              <input type="text" name="username" id="username" class="form-control" required>
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-laber">Email</label>
-              <input type="email" name="email" id="email" class="form-control" required>
-            </div>
-            <div class="mb-3">
-              <label for="password" class="form-laber">Password</label>
-              <input type="password" name="password" id="password" class="form-control" required>
-            </div>
-            <div class="mb-3">
-              <label for="repassword" class="form-laber">Re-password</label>
-              <input type="password" name="repassword" id="repassword" class="form-control" required>
-            </div>
+          {% endfor %}
+
+          {% for field in form %}
+          
+          <div class="mb3 {% if field.errors %} invalid {% endif %}">
+            {% if field.errors %}
+              <div class="alert alert-danger pb-0">
+                {{ field.errors }}
+              </div>
+            {% endif %}
+            <label for="{{field.id_for_label}}" class="form-label">{{ field.label }}</label>
+            {{ field }}
             
+          </div>
+
+          {% endfor %}
+
             <input type="submit" value="Register" class="btn btn-primary">
           </form>
         </div>
