password change proccess with PasswordChangeFrom

--- a/course/examples/account/templates/account/change_password.html
+++ b/course/examples/account/templates/account/change_password.html
@@ -6,7 +6,7 @@
 {% endblock %}
 
 {% block page_title %}
-    login.html
+    change_password.html
 {% endblock page_title %}
    
 {% block content %}
@@ -15,7 +15,7 @@
     <div class="row">
         <div class="col">
          
-            <h1>Login</h1>
+            <h1>Change Password</h1>
             <hr>
             <form method="POST" novalidate>
                 {% csrf_token %}
@@ -41,7 +41,7 @@
                 {% endfor %}
 
 
-                <input type="submit" value="Login" class="btn btn-primary">
+                <input type="submit" value="Change Password" class="btn btn-primary">
             </form>
            
         </div>
