--- a/course/examples/templates/partials/_header.html
+++ b/course/examples/templates/partials/_header.html
@@ -15,6 +15,9 @@
                             <a href="{% url "logout" %}" class="nav-link">Logout</a>
                         </li>
                         <li class="nav-item">
+                            <a href="{% url "change_password" %}" class="nav-link">Change Password</a>
+                        </li>
+                        <li class="nav-item">
                             <a href="#" class="nav-link">Hoş Geldin, {{user.username}}</a>
                         </li>
                     {% else %}
